--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,9 +21,12 @@ requirements:
   run:
     - dask-core >=2022.1.0
     - dask-image >=2021.12.0
+    - imageio-ffmpeg
     - magicgui
     - matplotlib-base >=3.5
+    - munkres
     - napari
+    - nd2reader
     - numpy
     - pandas
     - python >=3.8
@@ -31,7 +34,8 @@ requirements:
     - scikit-image >=0.18.3
     - scikit-learn
     - tifffile
-    - trackpy ==0.5.0
+    - toml
+    - trackpy >=0.5.0
 
 test:
   imports:
