--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,6 +8,8 @@ package:
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/palmari-{{ version }}.tar.gz
   sha256: 2b4ab3c1ed3d3edf7e742d0ab8b4fa8f7dd3fb53fd8cd9061cb46be499c0a889
+  patches:
+    - qtpy.patch  # Use qtpy instead of PyQt5
 
 build:
   noarch: python
