--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,6 +21,7 @@ requirements:
     - pip
     - python >=3.8
   run:
+    - click
     - dask-core >=2022.1.0
     - dask-image >=2021.12.0
     - imageio-ffmpeg
@@ -32,11 +33,13 @@ requirements:
     - numpy
     - pandas
     - python >=3.8
+    - pyyaml
     - qtpy
     - scikit-image >=0.18.3
     - scikit-learn
     - tifffile
     - toml
+    - tqdm
     - trackpy >=0.5.0
 
 test:
