--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,7 +25,7 @@ requirements:
     - dask-core >=2022.1.0
     - dask-image >=2021.12.0
     - imageio-ffmpeg
-    - magicgui
+    - magicgui >=0.5.0
     - matplotlib-base >=3.5
     - munkres
     - napari
