--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,7 +27,7 @@ requirements:
     - matplotlib-base >=3.5
     - munkres
     - napari
-    - nd2reader
+    - napari-aicsimageio
     - numpy
     - pandas
     - python >=3.8
@@ -35,7 +35,6 @@ requirements:
     - qtpy
     - scikit-image >=0.18.3
     - scikit-learn
-    - tifffile
     - toml
     - tqdm
     - trackpy >=0.5.0
